--- a/index.html
+++ b/index.html
@@ -36,8 +36,52 @@
                                         <!-- womem's jacket section -->
 
     <main>
-        <section class="max-w-screen-xl mx-auto font-bebas my-10 text-5xl">
-            <h3>Women's Jacket</h3>
+        <section class="max-w-screen-xl mx-auto font-bebas my-10">
+
+            <h3 class="text-5xl py-6 font-bebas">Women's Jacket</h3>
+           <div class=" grid grid-cols-3 gap-6">
+            <div class="p-3 shadow-xl shadow-[#dbdbdb] rounded-2xl">   
+                <img src="/images/jacket-1.png" alt="" class="bg-[#F1F1F1] px rounded-xl">
+                <h4 class="text-3xl font-bebas">Yellow jacket</h4>
+                <p class="text-xl font-serif">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+               <div class="flex justify-between items-center"> 
+                        <p class="text-4xl text-[#FABE4C] font-bebas">200$</p>
+                        <button class="text-2xl my-3 py-4 px-9 border-solid bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-medium flex gap-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>Buy Now
+                        </button>
+                    </div>
+                </div>
+
+
+            <div class="p-3 shadow-xl shadow-[#dbdbdb] rounded-2xl">   
+                <img src="/images/jacket-2.png" alt="" class="bg-[#F1F1F1] rounded-xl">
+                <h4 class="text-3xl">Yellow jacket</h4>
+                <p class="text-xl font-serif">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+               <div class="flex justify-between items-center"> 
+                        <p class="text-4xl text-[#FABE4C] font-bebas">200$</p>
+                        <button class=" my-3 py-4 px-9 border-solid bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-medium flex gap-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>Buy Now
+                        </button>
+                    </div>
+                </div>
+
+
+
+            <div class="p-3 shadow-xl shadow-[#dbdbdb] rounded-2xl">   
+                <img src="/images/jacket-3.png" alt="" class="bg-[#F1F1F1] rounded-xl">
+                <h4 class="text-3xl">Yellow jacket</h4>
+                <p class="text-xl font-serif">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+               <div class="flex justify-between items-center"> 
+                        <p class="text-4xl text-[#FABE4C] font-bebas">200$</p>
+                        <button class=" my-3 py-4 px-9 border-solid bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-medium flex gap-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>Buy Now
+                        </button>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
