Added nav bar and made it responsive

--- a/index.html
+++ b/index.html
@@ -13,10 +13,24 @@
             font-family: 'Bebas Neue', sans-serif;}
     </style>
 </head>
-    <header class="bg-amber-100 py-28 md:py-28">
-        <div class="flex flex-col justify-center items-center  md:mx-32 md:flex-row  ">
+    <header class="bg-amber-100 py-5 md:py-28">
+
+
+     <nav class="md:flex md:max-w-screen-3xl mx-auto font-bebas items-center justify-around">
+        <img src="/icons/logo.png" alt="" class="w-96 mdml-8">
+
+        <div><ul class=" sm:flex sm: ml-6 sm: mt-4 flex gap-6 text-2xl">
+            <li><a href="">Home</a></li>
+            <li><a href="">Product</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">About Us</a></li>
+        </ul></div>
+     </nav>
+
+
+        <div class="flex flex-col justify-center items-center mr-7 mt-8 md:mx-32 md:flex-row  ">
             <div class=" md:mr-60">
-                <h1 class="text-7xl uppercase py-3"> <span class="text-[#FABE4C] font-bebas">Be the Penguinsbr </span><br>of Winter</h1>
+                <h1 class=" text-5xl md:text-7xl uppercase py-3"> <span class="text-[#FABE4C] font-bebas">Be the Penguinsbr </span><br>of Winter</h1>
                 <p class="py-3">Lorem Ipsum is simply dummy text of the printing 
                     and typesetting industry.</p>
                     <button class=" my-3 py-4 px-9 border-solid bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-medium flex gap-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -36,10 +50,10 @@
                                         <!-- womem's jacket section -->
 
     <main>
-        <section class="max-w-screen-xl mx-auto font-bebas my-10">
+        <section class=" md:max-w-screen-xl mx-auto font-bebas my-10">
 
             <h3 class="text-5xl py-6 font-bebas">Women's Jacket</h3>
-           <div class=" grid grid-cols-3 gap-6">
+           <div class=" md:grid grid-cols-3 gap-6">
             <div class="p-3 shadow-xl shadow-[#dbdbdb] rounded-2xl">   
                 <img src="/images/jacket-1.png" alt="" class="bg-[#F1F1F1] px rounded-xl">
                 <h4 class="text-3xl font-bebas">Orange jacket</h4>
@@ -90,7 +104,7 @@
         <section class="max-w-screen-xl mx-auto font-bebas my-28">
 
             <h3 class="text-5xl py-6 font-bebas">Men's Jacket</h3>
-           <div class=" grid grid-cols-3 gap-6">
+           <div class=" p- md:grid grid-cols-3 gap-6">
             <div class="p-3 shadow-xl shadow-[#dbdbdb] rounded-2xl">   
                 <img src="/images/jacket-4.png" alt="" class="bg-[#F1F1F1] px rounded-xl">
                 <h4 class="text-3xl font-bebas">Ash and Yellow jacket</h4>
